--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,13 @@
 Flask==1.0.2
 gunicorn==19.9.0
+PyMySQL==0.9.3
+Jinja2==2.10
+Click==7.0
+MarkupSafe==1.1.0
+Werkzeug==0.14.1
+itsdangerous==1.1.0
+wheel==0.32.3
+setuptools==40.7.1
+pip==19.0.1
+Flask-SQLAlchemy==2.3.2
+SQLAlchemy==1.2.17
