--- a/requirements.txt
+++ b/requirements.txt
@@ -11,3 +11,13 @@ setuptools==40.7.1
 pip==19.0.1
 Flask-SQLAlchemy==2.3.2
 SQLAlchemy==1.2.17
+certifi==2018.11.29
+chardet==3.0.4
+idna==2.8
+requests==2.21.0
+urllib3==1.24.1
+get==2018.11.19
+post==2018.11.20
+public==2018.11.20
+query-string==2018.11.20
+request==2018.11.20
